objects/IO_Product__c.object
<CustomObject>
    <fields>
        <fullName>DRError__c</fullName>
        <label>DRError</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRProgressData__c</fullName>
        <label>DRProgressData</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRStatus__c</fullName>
        <label>DRStatus</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PricebookEntryFloorPrice__c</fullName>
        <label>PricebookEntryFloorPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PricebookEntryOverageCharge__c</fullName>
        <label>PricebookEntryOverageCharge</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PricebookEntryOverageUOM__c</fullName>
        <label>PricebookEntryOverageUOM</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricebookEntryRecurringPrice__c</fullName>
        <label>PricebookEntryRecurringPrice</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PricebookEntryRecurringUOM__c</fullName>
        <label>PricebookEntryRecurringUOM</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PricebookEntryUnitPrice__c</fullName>
        <label>PricebookEntryUnitPrice</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductDescription__c</fullName>
        <label>ProductDescription</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ProductFamily__c</fullName>
        <label>ProductFamily</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductLineOfBusiness__c</fullName>
        <label>ProductLineOfBusiness</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductName__c</fullName>
        <label>ProductName</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ProductProductCode__c</fullName>
        <label>ProductProductCode</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>IO Product</label>
    <nameField>
        <label>IO Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IO Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>